--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,9 +3,9 @@
 {% block content %}
 <!-- Carousel -->
 <div class="container-fluid py-5">
-    <div class="mb-4 ms-4">
+    <div class="ms-4">
         <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">Tin tức</h5>
-<!--        <h1 class="display-4"><b>Quy trình khám bệnh tại phòng khám</b></h1>-->
+        <!--        <h4 class=""><b>Cập nhật nhanh tin tức tại phòng khám</b></h4>-->
     </div>
     <div id="demo" class="carousel slide" data-bs-ride="carousel">
         <!-- Indicators/dots -->
@@ -16,18 +16,21 @@
         </div>
 
         <!-- The slideshow/carousel -->
-        <div class="carousel-inner">
+        <div class="carousel-inner" style="height: 500px">
             <div class="carousel-item active">
-                <img src="https://img.upanh.tv/2024/12/08/D6b81b8c2017905567d9ba4af37c6b51f-1.png" alt="Los Angeles"
+                <img src="https://res.cloudinary.com/dq2jtbrda/image/upload/v1733821435/v7rbrknhrt4uz1iqnwzj.jpg"
+                     style="object-fit: contain;" alt="Los Angeles"
                      class="d-block w-100">
             </div>
             <div class="carousel-item">
-                <img src="https://i.upanh.org/2024/12/08/Screenshot-2024-10-30-1028028b67d18249e55939.png" alt="Chicago"
-                     class="d-block w-100">
+                <img src="https://res.cloudinary.com/dq2jtbrda/image/upload/v1733821435/il65zg5lga2nasvrewyu.jpg"
+                     style="object-fit: contain;" alt="Chicago"
+                     class="d-block w-100 h-75">
             </div>
             <div class="carousel-item">
-                <img src="https://img.upanh.tv/2024/12/08/D6b81b8c2017905567d9ba4af37c6b51f-1.png" alt="New York"
-                     class="d-block w-100">
+                <img src="https://res.cloudinary.com/dq2jtbrda/image/upload/v1733821435/ccf65hzmy2wf2lawe2uo.jpg"
+                     style="object-fit: contain;" alt="New York"
+                     class="d-block w-100 h-50">
             </div>
         </div>
 
@@ -46,7 +49,9 @@
         <div class="row gx-5">
             <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 500px;">
                 <div class="position-relative h-100">
-                    <img class="position-absolute w-100 h-100 rounded" src="img/about.jpg" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100 rounded"
+                         src="https://res.cloudinary.com/dq2jtbrda/image/upload/v1733821784/dqgjfdcknl4nesaytmjs.jpg"
+                         style="object-fit: cover;">
                 </div>
             </div>
             <div class="col-lg-7">
@@ -103,17 +108,276 @@
         <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">Hướng dẫn</h5>
         <h1 class="display-4"><b>Quy trình khám bệnh tại phòng khám</b></h1>
     </div>
-    <img src="https://res-console.cloudinary.com/dq2jtbrda/media_explorer_thumbnails/3cf9e28254ce7efc4ef5c97e9ab8c5a9/detailed"
-         alt="" class="process-img text-center">
+    <img src="https://res.cloudinary.com/dq2jtbrda/image/upload/v1733807137/pu9lwkg5azztegfrpwhs.png"
+         alt="" class="process-img text-center w-100">
 </div>
 
 <div class="container-fluid py-5">
     <div class="container">
         <div class="text-center mx-auto mb-5" style="max-width: 500px;">
-            <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5"><b>ĐÁNH GIÁ CỦA BỆNH NHÂN</b>
+            <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">Bác sĩ</h5>
+            <h1 class="display-4">Đội ngũ bác sĩ giỏi, giàu kinh nghiệm</h1>
+        </div>
+        <div id="carouselControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="cards-wrapper">
+                        <div class="card">
+                            <img src="{{ url_for('static', filename='images/index/bacsi.jpg') }}" class="card-img-top"
+                                 alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of
+                                    the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                        <div class="card d-none d-md-block">
+                            <img src="{{ url_for('static', filename='images/index/bacsi.jpg') }}" class="card-img-top"
+                                 alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of
+                                    the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                        <div class="card d-none d-md-block">
+                            <img src="{{ url_for('static', filename='images/index/bacsi.jpg') }}" class="card-img-top"
+                                 alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of
+                                    the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="cards-wrapper">
+                        <div class="card">
+                            <img src="{{ url_for('static', filename='images/index/bacsi.jpg') }}" class="card-img-top"
+                                 alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of
+                                    the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                        <div class="card d-none d-md-block">
+                            <img src="{{ url_for('static', filename='images/index/bacsi.jpg') }}" class="card-img-top"
+                                 alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of
+                                    the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                        <div class="card d-none d-md-block">
+                            <img src="{{ url_for('static', filename='images/index/bacsi.jpg') }}" class="card-img-top"
+                                 alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of
+                                    the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="cards-wrapper">
+                        <div class="card">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of
+                                    the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                        <div class="card d-none d-md-block">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of
+                                    the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                        <div class="card d-none d-md-block">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of
+                                    the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </button>
+        </div>
+
+    </div>
+</div>
+
+<div class="container-fluid py-5">
+    <div class="container">
+        <div class="text-center mx-auto mb-5" style="max-width: 500px;">
+            <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5"><b>ĐÁNH GIÁ CỦA BỆNH
+                NHÂN</b>
             </h5>
             <h1 class="display-4">Các bệnh nhân nói gì về dịch vụ của chúng tôi?</h1>
         </div>
+        <!-- Carousel wrapper -->
+
+        <div class="row">
+            <div class="col-md-7 col-12">
+                <div id="carouselFeedback" data-mdb-carousel-init
+                     class="carousel slide text-center carousel-dark"
+                     data-mdb-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="rounded-circle shadow-1-strong mb-4"
+                                 src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(10).webp" alt="avatar"
+                                 style="width: 150px;"/>
+                            <div class="row d-flex justify-content-center">
+                                <div class="col-lg-8">
+                                    <h5 class="mb-3">Maria Kate</h5>
+                                    <p>Photographer</p>
+                                    <p class="text-muted">
+                                        <i class="fas fa-quote-left pe-2"></i>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus et deleniti
+                                        nesciunt sint eligendi reprehenderit reiciendis, quibusdam illo, beatae quia
+                                        fugit consequatur laudantium velit magnam error. Consectetur distinctio fugit
+                                        doloremque.
+                                    </p>
+                                </div>
+                            </div>
+                            <ul class="list-unstyled d-flex justify-content-center text-warning mb-0">
+                                <li><i class="fas fa-star fa-sm"></i></li>
+                                <li><i class="fas fa-star fa-sm"></i></li>
+                                <li><i class="fas fa-star fa-sm"></i></li>
+                                <li><i class="fas fa-star fa-sm"></i></li>
+                                <li><i class="far fa-star fa-sm"></i></li>
+                            </ul>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="rounded-circle shadow-1-strong mb-4"
+                                 src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(32).webp" alt="avatar"
+                                 style="width: 150px;"/>
+                            <div class="row d-flex justify-content-center">
+                                <div class="col-lg-8">
+                                    <h5 class="mb-3">John Doe</h5>
+                                    <p>Web Developer</p>
+                                    <p class="text-muted">
+                                        <i class="fas fa-quote-left pe-2"></i>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus et deleniti
+                                        nesciunt sint eligendi reprehenderit reiciendis.
+                                    </p>
+                                </div>
+                            </div>
+                            <ul class="list-unstyled d-flex justify-content-center text-warning mb-0">
+                                <li><i class="fas fa-star fa-sm"></i></li>
+                                <li><i class="fas fa-star fa-sm"></i></li>
+                                <li><i class="fas fa-star fa-sm"></i></li>
+                                <li><i class="fas fa-star fa-sm"></i></li>
+                                <li><i class="far fa-star fa-sm"></i></li>
+                            </ul>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="rounded-circle shadow-1-strong mb-4"
+                                 src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(1).webp" alt="avatar"
+                                 style="width: 150px;"/>
+                            <div class="row d-flex justify-content-center">
+                                <div class="col-lg-8">
+                                    <h5 class="mb-3">Anna Deynah</h5>
+                                    <p>UX Designer</p>
+                                    <p class="text-muted">
+                                        <i class="fas fa-quote-left pe-2"></i>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus et deleniti
+                                        nesciunt sint eligendi reprehenderit reiciendis, quibusdam illo, beatae quia
+                                        fugit consequatur laudantium velit magnam error. Consectetur distinctio fugit
+                                        doloremque.
+                                    </p>
+                                </div>
+                            </div>
+                            <ul class="list-unstyled d-flex justify-content-center text-warning mb-0">
+                                <li><i class="fas fa-star fa-sm"></i></li>
+                                <li><i class="fas fa-star fa-sm"></i></li>
+                                <li><i class="fas fa-star fa-sm"></i></li>
+                                <li><i class="fas fa-star fa-sm"></i></li>
+                                <li><i class="far fa-star fa-sm"></i></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselFeedback" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselFeedback" data-bs-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-5 col-12">
+                <form>
+                    <h2>Phản hồi</h2>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Họ và tên</label>
+                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputPassword1" class="form-label">Nghề nghiệp</label>
+                        <input type="text" class="form-control" id="exampleInputPassword1">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputPassword1" class="form-label">Cảm nhận của bạn về dịch vụ</label>
+                        <input type="text" class="form-control" id="exampleInputPassword1">
+                    </div>
+
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="ratings">
+                            <div class="rating"><input type="radio" name="rating" value="5" id="5"><label
+                                    for="5">☆</label>
+                                <input type="radio" name="rating" value="4" id="4"><label for="4">☆</label> <input
+                                        type="radio"
+                                        name="rating"
+                                        value="3"
+                                        id="3"><label
+                                        for="3">☆</label> <input type="radio" name="rating" value="2" id="2"><label
+                                        for="2">☆</label> <input type="radio" name="rating" value="1" id="1"><label
+                                        for="1">☆</label>
+                            </div>
+                        </div>
+                        <h5 class="review-count">245 Đánh giá</h5>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+        </div>
+
 
     </div>
 </div>
