--- a/app/templates/layout/base.html
+++ b/app/templates/layout/base.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}"/>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <title>PHÒNG KHÁM</title>
 </head>
 <body>
@@ -35,6 +37,5 @@
 {% block footer %}
     {% include 'layout/footer.html'%}
 {% endblock %}
-
 </body>
 </html>
