--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -1,26 +1,25 @@
 <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
 
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <img src="https://res-console.cloudinary.com/dq2jtbrda/media_explorer_thumbnails/eae65ef3c0b310f013391f2782b9a680/detailed" style="width:40px;"
+        <a class="navbar-brand" href="/">
+            <img src="url_for('static', filename='images/index/bacsi.jpg')" style="width:40px;"
                  alt="">
-            Phòng Khám Miyek</a>
+            Phòng Khám MIYEK</a>
         <!-- Links -->
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Link 1</a>
+                <a class="nav-link" href="/examine">Đăng kí lịch khám</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link 2</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link 3</a>
+                <a class="nav-link" href="#">Phản hồi</a>
             </li>
 
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Tài khoản</a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Đăng nhập</a></li>
+                <a class="nav-link dropdown-toggle align-items-center" href="#" role="button" data-bs-toggle="dropdown"><i class="fa-solid fa-user"></i></a>
+                <ul class="dropdown-menu dropdown-menu-end">
+                    <li style="right: 0;"><a class="dropdown-item" href="/login">Đăng nhập</a></li>
+                    <li style="right: 0;"><a class="dropdown-item" href="#">Tài khoản</a></li>
+                    <li style="right: 0;"><a class="dropdown-item" href="#">Đăng xuất</a></li>
                 </ul>
             </li>
 
