--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -198,7 +198,7 @@
                 <div class="carousel-item">
                     <div class="cards-wrapper">
                         <div class="card">
-                            <img src="..." class="card-img-top" alt="...">
+                            <img src="{{ url_for('static', filename='images/index/bacsi.jpg') }}" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
@@ -208,7 +208,7 @@
                             </div>
                         </div>
                         <div class="card d-none d-md-block">
-                            <img src="..." class="card-img-top" alt="...">
+                            <img src="{{ url_for('static', filename='images/index/bacsi.jpg') }}" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
@@ -218,7 +218,7 @@
                             </div>
                         </div>
                         <div class="card d-none d-md-block">
-                            <img src="..." class="card-img-top" alt="...">
+                            <img src="{{ url_for('static', filename='images/index/bacsi.jpg') }}" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
@@ -260,121 +260,108 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img class="rounded-circle shadow-1-strong mb-4"
-                                 src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(10).webp" alt="avatar"
+                                 src="{{ binhluan[0].avatar }}" alt="avatar"
                                  style="width: 150px;"/>
                             <div class="row d-flex justify-content-center">
                                 <div class="col-lg-8">
-                                    <h5 class="mb-3">Maria Kate</h5>
-                                    <p>Photographer</p>
+                                    <h5 class="mb-3">{{ binhluan[0].ten }}</h5>
+                                    <p>{{ binhluan[0].nghenghiep }}</p>
                                     <p class="text-muted">
                                         <i class="fas fa-quote-left pe-2"></i>
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus et deleniti
-                                        nesciunt sint eligendi reprehenderit reiciendis, quibusdam illo, beatae quia
-                                        fugit consequatur laudantium velit magnam error. Consectetur distinctio fugit
-                                        doloremque.
+                                        {{ binhluan[0].binhluan }}
                                     </p>
+                                    <p class="date">{{ binhluan[0].ngaytao }}</p>
                                 </div>
                             </div>
                             <ul class="list-unstyled d-flex justify-content-center text-warning mb-0">
+                                {% for c in range(1, binhluan[0].star_value + 1) %}
                                 <li><i class="fas fa-star fa-sm"></i></li>
-                                <li><i class="fas fa-star fa-sm"></i></li>
-                                <li><i class="fas fa-star fa-sm"></i></li>
-                                <li><i class="fas fa-star fa-sm"></i></li>
+                                {% endfor %}
+                                {% for c in range(1, 6 - binhluan[0].star_value) %}
                                 <li><i class="far fa-star fa-sm"></i></li>
+                                {% endfor %}
                             </ul>
                         </div>
+
+                        <!-- Remaining items (binhluan[1:]) -->
+                        {% for b in binhluan[1:] %}
                         <div class="carousel-item">
                             <img class="rounded-circle shadow-1-strong mb-4"
-                                 src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(32).webp" alt="avatar"
+                                 src="{{ b.avatar }}" alt="avatar"
                                  style="width: 150px;"/>
                             <div class="row d-flex justify-content-center">
                                 <div class="col-lg-8">
-                                    <h5 class="mb-3">John Doe</h5>
-                                    <p>Web Developer</p>
+                                    <h5 class="mb-3">{{ b.ten }}</h5>
+                                    <p>{{ b.nghenghiep }}</p>
                                     <p class="text-muted">
                                         <i class="fas fa-quote-left pe-2"></i>
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus et deleniti
-                                        nesciunt sint eligendi reprehenderit reiciendis.
+                                        {{ b.binhluan }}
                                     </p>
+                                    <p class="date">{{ b.ngaytao }}</p>
                                 </div>
                             </div>
                             <ul class="list-unstyled d-flex justify-content-center text-warning mb-0">
+                                {% for c in range(1, b.star_value + 1) %}
                                 <li><i class="fas fa-star fa-sm"></i></li>
-                                <li><i class="fas fa-star fa-sm"></i></li>
-                                <li><i class="fas fa-star fa-sm"></i></li>
-                                <li><i class="fas fa-star fa-sm"></i></li>
+                                {% endfor %}
+                                {% for c in range(1, 6 - b.star_value) %}
                                 <li><i class="far fa-star fa-sm"></i></li>
+                                {% endfor %}
                             </ul>
                         </div>
-                        <div class="carousel-item">
-                            <img class="rounded-circle shadow-1-strong mb-4"
-                                 src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(1).webp" alt="avatar"
-                                 style="width: 150px;"/>
-                            <div class="row d-flex justify-content-center">
-                                <div class="col-lg-8">
-                                    <h5 class="mb-3">Anna Deynah</h5>
-                                    <p>UX Designer</p>
-                                    <p class="text-muted">
-                                        <i class="fas fa-quote-left pe-2"></i>
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus et deleniti
-                                        nesciunt sint eligendi reprehenderit reiciendis, quibusdam illo, beatae quia
-                                        fugit consequatur laudantium velit magnam error. Consectetur distinctio fugit
-                                        doloremque.
-                                    </p>
-                                </div>
-                            </div>
-                            <ul class="list-unstyled d-flex justify-content-center text-warning mb-0">
-                                <li><i class="fas fa-star fa-sm"></i></li>
-                                <li><i class="fas fa-star fa-sm"></i></li>
-                                <li><i class="fas fa-star fa-sm"></i></li>
-                                <li><i class="fas fa-star fa-sm"></i></li>
-                                <li><i class="far fa-star fa-sm"></i></li>
-                            </ul>
-                        </div>
+                        {% endfor %}
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselFeedback" data-bs-slide="prev">
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselFeedback"
+                            data-bs-slide="prev">
                         <span class="carousel-control-prev-icon"></span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselFeedback" data-bs-slide="next">
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselFeedback"
+                            data-bs-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </button>
                 </div>
             </div>
             <div class="col-md-5 col-12">
-                <form>
+                <form method="post" action="/" enctype="multipart/form-data">
                     <h2 id="phanhoi">Phản hồi</h2>
                     <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Họ và tên</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                        <label for="name" class="form-label">Họ và tên</label>
+                        <input type="text" class="form-control" id="name" aria-describedby="emailHelp"
+                               name="name">
+                        <div id="emailHelp" class="form-text">We'll never share your information with anyone else.</div>
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputPassword1" class="form-label">Nghề nghiệp</label>
-                        <input type="text" class="form-control" id="exampleInputPassword1">
+                        <input type="text" class="form-control" id="exampleInputPassword1" name="nghenghiep">
                     </div>
                     <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Cảm nhận của bạn về dịch vụ</label>
-                        <input type="text" class="form-control" id="exampleInputPassword1">
+                        <label for="exampleInputPassword2" class="form-label">Cảm nhận của bạn về dịch vụ</label>
+                        <input type="text" class="form-control" id="exampleInputPassword2" name="binhluan">
+                    </div>
+                    <div class="mb-3">
+                        <label for="avatar">Ảnh đại diện</label>
+                        <input type="file" class="form-control" id="avatar" name="avatar"/>
                     </div>
 
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="ratings">
-                            <div class="rating"><input type="radio" name="rating" value="5" id="5"><label
-                                    for="5">☆</label>
-                                <input type="radio" name="rating" value="4" id="4"><label for="4">☆</label> <input
-                                        type="radio"
-                                        name="rating"
-                                        value="3"
-                                        id="3"><label
-                                        for="3">☆</label> <input type="radio" name="rating" value="2" id="2"><label
-                                        for="2">☆</label> <input type="radio" name="rating" value="1" id="1"><label
-                                        for="1">☆</label>
+                            <div class="rating">
+                                <input type="radio" name="rating" value="5" id="5"><label for="5">☆</label>
+                                <input type="radio" name="rating" value="4" id="4"><label for="4">☆</label>
+                                <input type="radio" name="rating" value="3" id="3"><label for="3">☆</label>
+                                <input type="radio" name="rating" value="2" id="2"><label for="2">☆</label>
+                                <input type="radio" name="rating" value="1" id="1"><label for="1">☆</label>
                             </div>
                         </div>
                         <h5 class="review-count">245 Đánh giá</h5>
                     </div>
 
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary ">Submit</button>
+                    <div class="thongbao">
+                        {% if err_msg %}
+                        <span class="{% if 'động lực' in err_msg %}message-success{% else %}message-error{% endif %}">{{ err_msg }}</span>
+                        {% endif %}
+                    </div>
                 </form>
             </div>
         </div>
