--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -18,9 +18,9 @@
                     </div>
 
 
-                    <form class="px-md-2" action="/dang-nhap" method="POST">
+                    <form class="px-md-2" action="/login" method="POST">
                         <div class="form-floating mb-4 form-floating">
-                            <input type="text" id="username" class="form-control" name="Username" value=""
+                            <input type="text" id="username" class="form-control" name="username" value=""
                                    placeholder="Username" required="">
                             <label class="form-label" for="username">Username</label>
                         </div>
@@ -28,7 +28,7 @@
                         <p class="text-danger d-none">Username không tồn tại</p>
 
                         <div class="form-floating mb-4 form-floating">
-                            <input type="password" id="password" class="form-control" value="" name="Password"
+                            <input type="password" id="password" class="form-control" value="" name="password"
                                    placeholder="Mật khẩu" required="">
                             <label class="form-label" for="password">Mật khẩu</label>
                         </div>
@@ -62,3 +62,6 @@
     </div>
 </div>
 {% endblock %}
+
+
+
