--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -40,7 +40,7 @@
                             <select class="form-select form-inline" aria-label="Default select example" name="role">
                                 <option value="patient" selected="">Admin</option>
                                 <option value="doctor">Bác sĩ</option>
-                                <option value="nurse" selecnted="">Y tá</option>
+                                <option value="nurse" selected="">Y tá</option>
                                 <option value="cashier">Thu ngân</option>
                             </select>
                         </div>
