--- a/app/templates/admin/hoadon.html
+++ b/app/templates/admin/hoadon.html
@@ -22,12 +22,13 @@
                     <path d="M8.5 4.5a.5.5 0 0 0-1 0v.634l-.549-.317a.5.5 0 1 0-.5.866L7 6l-.549.317a.5.5 0 1 0 .5.866l.549-.317V7.5a.5.5 0 1 0 1 0v-.634l.549.317a.5.5 0 1 0 .5-.866L9 6l.549-.317a.5.5 0 1 0-.5-.866l-.549.317V4.5zM5.5 9a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5zm0 2a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5z"></path>
                     <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm10-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1z"></path>
                 </svg>
-                <p class="pt-0 font-weight-bold">Chọn ngày:</p>
-                <div class="justify-content-center d-flex center">
-                    <input type="date" data-date="" data-date-format="DD MMMM YYYY" value="2015-08-09">
-                    <button class="btn btn-primary ml-3">Chọn</button>
-                </div>
-
+                <form action="post" action="/hoadon">
+                    <p class="pt-0 font-weight-bold">Chọn ngày:</p>
+                    <div class="justify-content-center d-flex center">
+                        <input type="date" name="datepicker">
+                        <button class="btn btn-primary ml-3">Chọn</button>
+                    </div>
+                </form>
             </div>
 
         </div>
@@ -66,12 +67,14 @@
                     <td>
                         {% if h.isThanhtoan == 0 %}
                         <button class="d-flex justify-content-center btn btn-danger" data-toggle="modal"
-                                data-target="#exampleModal">CHƯA THANH TOÁN
+                                data-target="#exampleModal"><a class="d-flex justify-content-center btn btn-danger"
+                                                               href="?benhnhan={{h.id}}">CHƯA THANH TOÁN</a>
                         </button>
                         {% else %}
-                        <button class="d-flex justify-content-center btn btn-success" data-toggle="modal"
-                                data-target="#exampleModal">ĐÃ THANH TOÁN
-                        </button>
+                        <div data-toggle="modal" data-target="#exampleModal" id="idForm">
+                            <a class="d-flex justify-content-center btn btn-success"
+                            href="?benhnhan={{h.id}}">ĐÃ THANH TOÁN</a>
+                        </div>
                         {% endif %}
                     </td>
                 </tr>
@@ -99,29 +102,29 @@
                             <div class="col-xl-6">
                                 <div class="form-group">
                                     <label>Mã hóa đơn:</label>
-                                    <input type="" class="form-control w-100" disabled>
+                                    <div class="text-light p-2 bg-info font-weight-normal"></div>
                                 </div>
                                 <div class="form-group">
                                     <label>Tên khách hàng:</label>
-                                    <input type="" class="form-control w-100" disabled>
+                                    <div class="text-light p-2 bg-info font-weight-normal"></div>
                                 </div>
                                 <div class="form-group">
                                     <label>Số điện thoại:</label>
-                                    <input type="" class="form-control w-100" disabled>
+                                    <div class="text-light p-2 bg-info font-weight-normal"></div>
                                 </div>
                             </div>
                             <div class="col-xl-6">
                                 <div class="form-group">
                                     <label>Tổng hóa đơn:</label>
-                                    <input type="" class="form-control w-100" disabled>
+                                    <div class="text-light p-2 bg-info font-weight-normal"></div>
                                 </div>
                                 <div class="form-group">
                                     <label>Ngày sinh:</label>
-                                    <input type="" class="form-control w-100" disabled>
+                                    <div class="text-light p-2 bg-info font-weight-normal"></div>
                                 </div>
                                 <div class="form-group">
                                     <label>Ngày khám:</label>
-                                    <input type="" class="form-control w-100" disabled>
+                                    <div class="text-light p-2 bg-info font-weight-normal"></div>
                                 </div>
                             </div>
                         </div>
@@ -144,6 +147,14 @@
         </div>
     </div>
 </div>
+
+<script>
+    $("#idForm").submit(function(e) {
+
+    e.preventDefault(); // avoid to execute the actual submit of the form.
+
+});
+</script>
 {% else %}
 {% endif %}
 {% endblock %}
